# grpc-ping

./: Cargo.toml  Earthfile  README.md  build.rs  gitversion.yml  index.yaml
.github/workflows/: release.yaml
charts/grpc-ping/: Chart.yaml  values.yaml
charts/grpc-ping-cert/: Chart.yaml  values.yaml
charts/grpc-ping-cert/templates/: certificate.yaml
charts/grpc-ping-grpc-route/: Chart.yaml  values.yaml
charts/grpc-ping-grpc-route/templates/: grpc-route.yaml
charts/grpc-ping/templates/: deployment.yaml  service.yaml
proto/: ping.proto
src/: main.rs
