[package]
name = "grpc-ping"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.23"
clap_derive = "4.5.18"
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["tls"] }
tonic-reflection = "0.12.3"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
rustls = "0.23.20"

[build-dependencies]
tonic-build = "0.12.3"